@@ -1300,7 +1300,8 @@ Example : modify jscript\n\r\
 Example : modify news\n\r\
 Short(s): \n\r\
 A command for the modification of items, mobs, users, quests, rooms, polls, classes, races, \
-news, areas, components, planes, and exits. Enter MODIFY for more information on command usage.
+news, areas, components, expertise, planes, and exits. Enter MODIFY for more information \
+on command usage.
 	
 I3=\
 This refers to the InterMud3 system, which may or may not be \
