@@ -1,0 +1,8 @@
+POOPY@x1=Poopy @x2,10,LEVEL,-SKILLFLAG +INFLUENTIAL,-MAXCLASSLEVEL +>={27+(5*@x1)},+CHA {12+@x1},0,1,0,0,0
+HELP_=<EXPERTISE>The ability to be more poopy when imposing ones will on others.
+
+OOPY@x1=Oopy @x2,10,LEVEL,-SKILLFLAG +INFLUENTIAL,-MAXCLASSLEVEL +>={27+(5*@x1)},+CHA {12+@x1},0,1,0,0,0
+HELP_=<EXPERTISE>The ability to be more doopy when imposing ones will on others.
+
+DOOPY@x1=Doopy!! @x2,10,LEVEL,-SKILLFLAG +INFLUENTIAL,-MAXCLASSLEVEL +>={27+(5*@x1)},+CHA {12+@x1},0,1,0,0,0
+HELP_=<EXPERTISE>The ability to be more doopy when imposing ones will on others.
